src/test/deca/syntax/invalid/1_prog_2_main.deca
// Description:
//    tests de non-terminal 'prog' qui ne peut pas procède deux main.
//
// Resultats:
//    Ligne 15 : Erreur de syntaxe.
//
// Historique:
//    cree le 01/01/2023

// Un exemple de programme Deca
{
}
{
}